finalização da conexão básica de service e arquivo de testes

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DB_USER = u210442941_wtech_admin
 DB_PASSWORD = Y$3u1Plp
-DB = u210442941_gerencia_wtech
+DB_DATABASE = u210442941_gerencia_wtech
 DB_HOST = 45.132.157.1
